# Stock_Analysis

./: .gitignore  README.md  pyproject.toml
docs/automation/: daily-research-prompt.md
docs/superpowers/plans/: 2026-07-21-stock-research-system.md  2026-07-22-beijing-exchange-support.md  2026-07-22-chinese-report-language.md  2026-07-22-feishu-report-notifications.md  2026-07-22-market-data-provider-replacement.md  2026-07-22-price-move-analysis.md  2026-07-22-report-clarity.md  2026-07-22-twice-daily-research.md
docs/superpowers/specs/: 2026-07-21-stock-research-system-design.md  2026-07-22-beijing-exchange-support-design.md  2026-07-22-feishu-report-notification-design.md  2026-07-22-market-data-provider-replacement-design.md  2026-07-22-price-move-analysis-design.md  2026-07-22-report-clarity-design.md  2026-07-22-twice-daily-research-design.md
src/stock_research/: cli.py  db.py  settings.py
src/stock_research/domain/: __init__.py  enums.py  models.py
src/stock_research/repositories/: __init__.py  reports.py  runs.py  stocks.py
src/stock_research/resources/: stocks.example.yaml
src/stock_research/services/: daily_run.py  (+9 more)
tests/: conftest.py  test_cli.py  test_cli_notifications.py  test_configuration.py  test_daily_run.py  test_evidence.py  test_feishu_notifications.py  test_indicators.py  test_integration_report.py  test_market_data.py  test_market_outlook.py  test_project_bootstrap.py  test_recommendations.py  test_report_builder.py  test_report_language.py  test_report_store.py  test_web.py
tests/fixtures/: daily_research_request.json  stocks.yaml
(+8 files in other folders)
