[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.16",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "jinja2>=3.1,<4.0",
  "numpy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "pydantic>=2.10,<3.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "typer>=0.15,<1.0",
  "uvicorn>=0.32,<1.0",
]

[project.scripts]
stock-research = "stock_research.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
